--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./">
+  <link rel="stylesheet" href="./dist/output.css">
   
   <title>Frontend Mentor | [Blogr]</title>
 
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-    <nav class="flex flex-row justify-between items-center px-24 py-12 h-14">
+    <nav class="flex flex-row justify-between items-center px-24 py-12 h-47 bg-gradient-to-r from-[hsl(13,100%,72%)]">
       <div class="flex items-center space-x-16">
         <img src="./Media/logo.svg" alt="blogr">
       </div>
@@ -51,63 +51,85 @@
      
     </nav>
 
-  
-  
-  
-  
-
-  A modern publishing platform
-  Grow your audience and build your online brand
-
-  Start for Free
-  Learn More
-
-  Designed for the future
-
-  Introducing an extensible editor
-  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.
-
-  Robust content management
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
-
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-  
-  Contact
-  Newsletter
-  LinkedIn
-
+    <main>
+      <div class="border-b-1 border-b rounded-bl-[100px] bg-gradient-to-r from-[hsl(18,97%,46%)] to[hsl(353,100%, )]">
+      <h3 class="flex justify-center items-center py-7">A modern publishing platform</h3>
+      <p class="flex justify-center items-center py-7"> Grow your audience and build your online brand</p>
+      </div>
+      <div>
+        <button >Start for Free</button>
+        <button>Learn More</button>
+      </div>
+      <div>
+        <h3>
+          Designed for the future
+        </h3>
+      </div>
+      <div>
+        <h3> Introducing an extensible editor</h3>
+        <p>  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+          The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+          videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+          change the looks of a blog.
+        </p>
+          <h3>Robust content management </h3>
+          <p>
+            Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+            by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+          </p>
+          <h3>State of the Art Infrastructure</h3>
+          <p>  
+            With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+            This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+          </p>
+          <h3>Free, open, simple</h3>
+          <p>
+            Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+            features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
+            and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+          </p>
+          <h3>  Powerful tooling</h3>
+          <p>
+            Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+            capable of producing even the most complicated sites.
+          </p>
+      </div>
+    </main>
+    <footer class="mt-80 text-white bg-slate-900">
+      <div class="mt-40 h-72 pt-12 rounded-tr-[100px]">
+        <section class="flex justify-around">
+          <img src="./Media/logo.svg" alt="blogr" class="h-10">
+          
+          <nav>
+            <ul>
+              <li class="mb-5">Product</li>
+              <li>Overview</li>
+              <li>Pricing</li>
+              <li>Marketplace</li>
+              <li>Features</li>
+              <li>Integrations</li>
+            </ul>
+          </nav>
+            <nav>
+              <ul>
+                <li class="mb-5">Company</li>
+                <li>About</li>
+                <li>Team</li>
+                <li>Blog</li>
+                <li>Careers</li>
+              </ul>
+            </nav>
+            <nav>
+              <ul>
+                <li class="mb-5">Connect</li>
+                <li>Contact</li>
+                <li>Newsletter</li>
+                <li>LinkedIn</li>
+              </ul>
+            </nav>
+            </section>
+      </div>
+    </footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Thariwa Umar</a>.
